# _bak_cointoss-rust

./: .hcignore  LICENSE  README.md  bundle.json  package-lock.json
learning/: misc.md
test/: index.js  package-lock.json
ui/: index.html
zomes/cointoss/: zome.json
zomes/cointoss/code/: .build  Cargo.toml
zomes/cointoss/code/src/: entries.rs  lib.rs
