[package]
name = "cointoss"
version = "0.1.0"
authors = ["Qubeo <32247672+Qubeo@users.noreply.github.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
hdk = { git = "https://github.com/holochain/holochain-rust" , branch = "develop" }
holochain_wasm_utils = { git = "https://github.com/holochain/holochain-rust" , branch = "develop" }
holochain_core_types_derive = { git = "https://github.com/holochain/holochain-rust" , branch = "develop" }
rand = "*"
multihash = "*"
log = "*"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
